--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/swiper.css"><!--swiper플러그인연결-->
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <title>세이브더칠드런</title>
+  <title>세이브더칠드런 | 노찬호 포트폴리오</title>
 </head>
 <body>
 
