--- a/sub3.html
+++ b/sub3.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/sub3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="css/swiper.min.css">
-  <title>세이브더칠드런-캠페인</title>
+  <title>세이브더칠드런 | 노찬호 포트폴리오</title>
   <style>
 
     .swiper-container:first-of-type{
