--- a/sub4.html
+++ b/sub4.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/sub4.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <title>세이브더칠드런-선물가게</title>
+  <title>세이브더칠드런 | 노찬호 포트폴리오</title>
 </head>
 <body>
 
